[package]
authors = ["Enn Michael <enntheprogrammer@gmail.com>"]
edition = "2018"
name = "conversion"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "demo"
path = "src/demo.rs"
required-features = ["build-demo"]

[features]
build-demo = []
build-wasm = ["web-sys"]
default = ["console_error_panic_hook", "build-wasm"]

[dependencies]
avif-serialize = "0.6.5"
image = {version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "bmp", "hdr", "dxt", "dds", "farbfeld"]}
js-sys = "0.3.49"
rav1e = {git = "https://github.com/ennmichael/rav1e", branch = "v0.4.0-alpha-progress-tracking", default-features = false}
wasm-bindgen = {version = "0.2.72"}
web-sys = {version = "0.3.49", features = ["console"], optional = true}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.6", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = {version = "0.4.5", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.22"

[profile.release]
lto = true
